--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,11 @@ h1 {
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.photographer_section article img:hover {
+    transform: scale(1.05);
 }
