--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,16 @@ h1 {
     flex-direction: column;
 }
 
+/* .photographer_section article a {
+    text-decoration: none;
+    text-align: center;
+    color: black;
+}
+
+.photographer_section article a:focus-visible {
+    outline-color: #901C1C;
+} */
+
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
