style sur les elts cliquables

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ h1 {
     flex-direction: column;
 }
 
-/* .photographer_section article a {
+.photographer_section article a {
     text-decoration: none;
     text-align: center;
     color: black;
@@ -47,7 +47,7 @@ h1 {
 
 .photographer_section article a:focus-visible {
     outline-color: #901C1C;
-} */
+} 
 
 .photographer_section article h2 {
     color: #D3573C;
