recherche style description photographes page d'accueil

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,26 @@ h1 {
     font-size: 36px;
 }
 
+
+
+/* .photographer_section article h3 {
+    color: #901C1C;
+    font-size: 13px;
+    margin-bottom: 0;
+}
+
+.photographer_section article p {
+    font-size: 12px;
+    margin-bottom: 0;
+}
+
+.photographer_section article .price {
+    font-size: 12px;
+    color: #757575;
+} */
+
+
+
 .photographer_section article img {
     height: 200px;
     width: 200px;
