--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h1 {
 
 
 
-/* .photographer_section article h3 {
+.photographer_section article h3 {
     color: #901C1C;
     font-size: 13px;
     margin-bottom: 0;
@@ -73,7 +73,7 @@ h1 {
 .photographer_section article .price {
     font-size: 12px;
     color: #757575;
-} */
+}
 
 
 
