--- a/css/photographer.css
+++ b/css/photographer.css
@@ -11,6 +11,27 @@
     align-items: center;
 }
 
+
+#photographer-name {
+    color: #D3573C;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+#photographer-location {
+    color: #901C1C;
+    font-size: 15px;
+    margin: 0;
+}
+#photographer-photo {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 25px 0;
+}
+
+
 .contact_button {
     font-size: 20px;
     font-weight: bold;
