--- a/css/photographer.css
+++ b/css/photographer.css
@@ -7,9 +7,11 @@
     height: 300px;
     margin: 0 100px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: space-around; 
     align-items: center;
 }
+
 
 
 #photographer-name {
@@ -30,6 +32,9 @@
     overflow: hidden;
     margin: 25px 0;
 }
+#photographer-desc {
+    margin: 20px 0;
+} 
 
 
 .contact_button {
@@ -97,4 +102,8 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+
+form #message {
+    height: 170px;
 }
