--- a/css/style.css
+++ b/css/style.css
@@ -55,19 +55,24 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 
 
 .photographer_section article h3 {
     color: #901C1C;
-    font-size: 13px;
+    font-size: 21px;
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 .photographer_section article p {
-    font-size: 12px;
+    font-size: 20px;
     margin-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .photographer_section article .price {
