--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,3 @@
-#contact_modal {
-    display: none;
-}
-
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
@@ -42,24 +38,18 @@
     font-weight: bold;
     color: white;
     padding: 11px;
-    width: 170px;
     height: 70px;
     border: none;
     background-color: #901C1C;
     border-radius: 5px;
-    cursor: pointer;
+    margin-top: 30px;
 }
 
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     padding: 35px;
-    margin: auto;
+    border: none;
 }
 
 .modal header {
@@ -93,8 +83,6 @@ form div {
     display: flex;
     flex-direction: column;
     width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
 }
 
 form input {
@@ -104,6 +92,3 @@ form input {
     border-radius: 5px;
 }
 
-form #message {
-    height: 170px;
-}
