--- a/css/photographer.css
+++ b/css/photographer.css
@@ -8,6 +8,22 @@
     align-items: center;
 }
 
+.media-container {
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* justify-content: space-between; *//*Aligner les éléments sur les bords des conteneurs */
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 95px;
+    margin: 0 100px;
+}
+
+/* .media-item { */
+    /* Ajoutez vos styles pour chaque élément média ici */
+    
+/* } */
+
 
 
 #photographer-name {
