--- a/css/photographer.css
+++ b/css/photographer.css
@@ -9,20 +9,23 @@
 }
 
 .media-container {
-    /* display: flex;
-    flex-wrap: wrap; */
-    /* justify-content: space-between; *//*Aligner les éléments sur les bords des conteneurs */
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 95px;
-    margin: 0 100px;
+    margin: 100px;
 }
 
-/* .media-item { */
-    /* Ajoutez vos styles pour chaque élément média ici */
-    
-/* } */
+.media-item {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.media-content {
+    display: flex; 
+    align-items: center;
+    justify-content: space-between; /* Espacement égal entre les éléments */
+    color: #901C1C;
+}
 
 
 
