--- a/css/photographer.css
+++ b/css/photographer.css
@@ -106,6 +106,29 @@
     color: #901C1C;
 }
 
+
+/* MODAL COMPTEUR DE LIKES */
+.likes {
+    position: fixed; /* Stay in place */
+    bottom: 13px; /* Place it at the bottom */
+    right: 13px; /* Place it on the right */
+    width: 376px;
+    height: 89px;
+    background-color: rgb(219, 136, 118);
+    border-radius: 5px;
+    z-index: 9999; /* Ensure it stays above other elements */
+  }
+  
+  /* Modal Content */
+  .likesContent {
+    padding: 10px;
+    color: black;
+  }
+  
+  
+
+
+
 /* MODAL DE CONTACT */
 
 .contact_button {
