--- a/css/photographer.css
+++ b/css/photographer.css
@@ -108,7 +108,7 @@
 
 
 /* MODAL COMPTEUR DE LIKES */
-.likes {
+.photographersLikes {
     position: fixed; 
     bottom: 0px; 
     right: 25px; 
@@ -117,15 +117,18 @@
     background-color: rgb(219, 136, 118);
     border-radius: 5px;
     z-index: 9999; 
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
   }
   
   /* Modal Content */
   .likesContent {
     display: flex;
     justify-content:space-around;
-    /* align-content: center; */
-    padding: 10px;
+    align-items: center;
     color: black;
+    padding: 10px;
   }
   
   
