--- a/css/photographer.css
+++ b/css/photographer.css
@@ -125,10 +125,10 @@
   /* Modal Content */
   .likesContent {
     display: flex;
-    justify-content:space-around;
+    justify-content:space-between;
     align-items: center;
     color: black;
-    padding: 10px;
+    /* padding: 10px; */
   }
   
   
