--- a/css/photographer.css
+++ b/css/photographer.css
@@ -120,6 +120,7 @@
     display: flex;
     justify-content:space-around;
     align-items: center;
+    font-size: 24px;
   }
   
   /* Modal Content */
