--- a/css/photographer.css
+++ b/css/photographer.css
@@ -102,9 +102,21 @@
 .media-content {
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
     color: #901C1C;
 }
+
+
+/* LIGHTBOX MEDIAS */
+.lightbox {
+    width: 90%;
+    height: 900px; 
+}
+
+.lightbox-content {
+    width: 100%; 
+    height: 100%;
+}
+
 
 
 /* MODAL COMPTEUR DE LIKES */
@@ -129,7 +141,6 @@
     justify-content:space-between;
     align-items: center;
     color: black;
-    /* padding: 10px; */
   }
   
   
