--- a/css/photographer.css
+++ b/css/photographer.css
@@ -108,13 +108,14 @@
 
 /* LIGHTBOX MEDIAS */
 .lightbox {
-    width: 90%;
-    height: 900px; 
+    width: 80%;
+    height: 700px; 
+    margin-top: 40px;
 }
 
 .lightbox-content {
-    width: 100%; 
-    height: 100%;
+    width: 80%; 
+    height: 95%;
 }
 
 
