creation d un fichier lightbox ds le dossier scripts pr la lightbox des medias ( comme pr la modal de contact )

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -109,7 +109,8 @@
 /* LIGHTBOX MEDIAS */
 .lightbox {
     width: 80%;
-    height: 700px; 
+    height: 100%; 
+    /* height: 700px;  */
     margin-top: 40px;
 }
 
