--- a/css/photographer.css
+++ b/css/photographer.css
@@ -109,17 +109,32 @@
 /* LIGHTBOX MEDIAS */
 .lightbox {
     width: 80%;
-    height: 100%; 
-    /* height: 700px;  */
-    margin-top: 40px;
+    height: 80%; 
+    /* margin-top: 40px; */
 }
 
 .lightbox-content {
-    width: 80%; 
-    height: 95%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-
+.lightbox-content div video {
+    width: 70%;
+    height: 90%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.lightbox-content div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* MODAL COMPTEUR DE LIKES */
 .photographersLikes {
