--- a/css/photographer.css
+++ b/css/photographer.css
@@ -121,20 +121,38 @@
     align-items: center;
 }
 
-.lightbox-content div video {
+/* .lightbox-content div video {
     width: 70%;
-    height: 90%;
+    height: 90%; */
     /* display: flex;
     justify-content: center;
     align-items: center; */
+/* } */
+.lightbox-content div img,
+.lightbox-content div video {
+    max-width: 100%;
+    max-height: 100%;
 }
 .lightbox-content div {
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    z-index: 100;
+    /* color: #312E2E; */
+    background-color: red;
+}
+
 
 /* MODAL COMPTEUR DE LIKES */
 .photographersLikes {
@@ -159,7 +177,7 @@
     align-items: center;
     color: black;
   }
-  
+
   
 
 
