--- a/css/photographer.css
+++ b/css/photographer.css
@@ -107,52 +107,28 @@
 
 
 /* LIGHTBOX MEDIAS */
-.lightbox {
-    width: 80%;
-    height: 80%; 
-    /* margin-top: 40px; */
-}
 
 .lightbox-content {
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
 }
 
-/* .lightbox-content div video {
-    width: 70%;
-    height: 90%; */
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-/* } */
-.lightbox-content div img,
-.lightbox-content div video {
-    max-width: 100%;
-    max-height: 100%;
-}
-.lightbox-content div {
-    position: relative;
-    width: 100%;
-    height: 100%;
+.arrow-container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-}
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    z-index: 100;
-    /* color: #312E2E; */
-    background-color: red;
+    justify-content: space-between;
+    flex: 1;
 }
 
+#media-content {
+    height: calc(100% - 50px);
+}
+
+#media-content img {
+    height: 100%;
+    object-fit: cover;
+}
 
 /* MODAL COMPTEUR DE LIKES */
 .photographersLikes {
