--- a/css/photographer.css
+++ b/css/photographer.css
@@ -98,7 +98,6 @@
     cursor: pointer; /* Change le curseur en une petite main avec le doigt tendu */
 }
 
-
 .media-content {
     display: flex;
     align-items: center;
@@ -111,24 +110,41 @@
 .lightbox-content {
     display: flex;
     justify-content: space-between;
-}
-
-.arrow-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    align-items: center; 
     flex: 1;
 }
 
-#media-content {
-    height: calc(100% - 50px);
+.arrow-container {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between; 
+    align-items: center;
 }
 
-#media-content img {
+#btn-close-container {
+    margin-left: auto; /* Pousse le bouton de fermeture vers la droite */
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
+#media-content {
+    /* height: calc(100% - 50px); */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+} 
+
+#media-content img,
+#media-content video {
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 
 /* MODAL COMPTEUR DE LIKES */
 .photographersLikes {
