--- a/css/photographer.css
+++ b/css/photographer.css
@@ -107,11 +107,19 @@
 
 /* LIGHTBOX MEDIAS */
 
+.lightbox {
+    position: fixed; /* Position fixe pour rester à la même position sur l'écran */
+    top: 0; /* Alignement en haut de l'écran */
+    left: 0; /* Alignement à gauche de l'écran */
+    width: 95%; /* Largeur de la lightbox égale à 100% de la largeur de l'écran */
+    height: 90%; /* Hauteur de la lightbox égale à 100% de la hauteur de l'écran */
+}
+
 .lightbox-content {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-around; */
+    justify-content: center;
     align-items: center; 
-    flex: 1;
 }
 
 .arrow-container {
@@ -128,22 +136,31 @@
     right: 0;
 }
 
-
 #media-content {
-    /* height: calc(100% - 50px); */
+    max-width: 100%; /* Utiliser la largeur maximale possible sans déformation */
+    max-height: 100%; /* Utiliser la hauteur maximale possible sans déformation */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    flex: 1;
+    justify-content: center; /* Centrer verticalement l'image */
+    align-items: center; /* Centrer horizontalement l'image */
+    overflow: hidden; /* Cacher le débordement de contenu */
 } 
+
+#media-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    height: calc(100vh - 100px); /* Utiliser la hauteur de la fenêtre - 100px pour laisser de la place pour les flèches et les boutons */
+}
 
 #media-content img,
 #media-content video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%; /* Utiliser la largeur maximale possible sans déformation */
+    max-height: 100%; /* Utiliser la hauteur maximale possible sans déformation */
+    object-fit: contain; /* Conserver les proportions de l'image sans déformation */
 }
+
 
 
 /* MODAL COMPTEUR DE LIKES */
