style sur le coeur

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -96,6 +96,7 @@
 
 .like-icon {
     cursor: pointer; /* Change le curseur en une petite main avec le doigt tendu */
+    font-style: normal;
 }
 
 .media-content {
