--- a/css/photographer.css
+++ b/css/photographer.css
@@ -230,7 +230,8 @@ form div {
     width: 100%;
 }
 
-form input {
+form input,
+form textarea {
     width: 100%;
     height: 68px;
     border: none;
