style sur la modale de contact pour un centrage du formulaire

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -220,6 +220,11 @@
     align-items: center; */
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .formulaire {
     width: 33%;
