--- a/css/photographer.css
+++ b/css/photographer.css
@@ -233,7 +233,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 90vh;
+    /* max-height: 90vh; */
 }
 
 /* .formulaire {
