--- a/css/photographer.css
+++ b/css/photographer.css
@@ -236,14 +236,6 @@
     /* max-height: 90vh; */
 }
 
-/* .formulaire {
-    width: 33%;
-    height: 100%;
-    border-radius: 5px;
-    background-color: #DB8876;
-    padding: 35px;
-    flex-direction: column;
-} */
 .formulaire {
     width: 33%;
     /* Ajustez la largeur de votre formulaire selon vos besoins */
@@ -252,7 +244,7 @@
 
     border-radius: 5px;
     background-color: #DB8876;
-    padding: 35px;
+    padding: 20px;
 
 }
 
@@ -270,6 +262,9 @@
     font-size: 35px;
     font-weight: normal;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
 }
 
 .formulaire form {
