--- a/css/photographer.css
+++ b/css/photographer.css
@@ -252,6 +252,7 @@
 .formulaire header {
     justify-content: space-between;
     width: 100%;
+    padding-bottom: 20px;
 }
 
 .formulaire header img {
@@ -261,7 +262,7 @@
 .formulaire header h2 {
     font-size: 35px;
     font-weight: normal;
-    text-align: center;
+    /* text-align: center; */
     display: flex;
     flex-direction: column;
     margin: 0px;
